metabase/stacks/vanilla/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    env: loc
    app: metabase
    type: database
  name: metabase-database
spec:
  replicas: 1
  selector:
    matchLabels:
      env: loc
      app: metabase
      type: database
  template:
    metadata:
      labels:
        env: loc
        app: metabase
        type: database
    spec:
      containers:
      - image: postgres
        imagePullPolicy: IfNotPresent
        name: metabase-database
        ports:
        - name: database-port
          containerPort: 5432
        resources:
          limits:
            cpu: 200m
            memory: 2G
          requests:
            cpu: 1m
            memory: 1G
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        emptyDir: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
---
apiVersion: v1
kind: Service
metadata:
  labels:
    env: loc
    app: metabase
    type: database
  name: metabase-database-service
spec:
  ports:
  - port: 5432
    name: database-port
    protocol: TCP
    targetPort: database-port
  selector:
    env: loc
    app: metabase
    type: database
  type: ClusterIP
---
